refactor(skill): update controller and service to improve response structure and error handling